# simframe-services-poly-lithic

./: .gitignore  LICENSE  LICENSE.md  README.md  docker_compose.yaml  pyproject.toml  test_deployment.yaml  test_deployment_1.yaml  test_wrangler_client.py
docker/: poly-lithic.Dockerfile  poly-wrangler.Dockerfile
simframe_services/: __init__.py  lume-deployment.code-workspace  plugins.py  schemas.py  simframe_services.code-workspace  wrangler.py
simframe_services/routes/: __init__.py  v1.py  v2.py
simframe_services/routes/model/: __init__.py  v1.py
simframe_services/routes/wrangler/: __init__.py  v1.py  v2.py
